<resources>
    <string name="app_name">HangGame</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="email">Email</string>
    <string name="login">LOGIN</string>
    <string name="loginQuestion">Login?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp!</string>
    <string name="login_anonymous">LOGIN ANONYMOUS</string>
    <string name="np_hanggame">NP HANGGAME</string>
    <string name="main_menu">Main Menu</string>
    <string name="score">Score:</string>
    <string name="pause">PAUSE</string>
    <string name="options">OPTIONS</string>
    <string name="music">MUSIC</string>
    <string name="name">NAME</string>
</resources>